<resources>
    <string name="app_name">GFS Time Clock</string>
    <string name="admin_app_name">GFS Admin Options</string>
    <string name="scan_badge">Scan Camera</string>
    <string name="clock_in_button">Start Day F1</string>
    <string name="clock_out_button">End Day F5</string>
    <string name="break_in_button">End Break F6</string>
    <string name="break_out_button">Start Break F2</string>
    <string name="lunch_in_button">End Lunch F7</string>
    <string name="lunch_out_button">Start Lunch F3</string>
    <string name="punch_history">Punch History</string>
    <string name="change_job_button">Job Change F4</string>
    <string name="save_button">Change Job</string>
    <string name="clock_id">Clock ID</string>
    <string name="user_name">Username</string>
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="server_address">Clock API Address</string>
    <string name="employee_address">Employee API Address</string>

    <string name="admin_pin">Enter PIN</string>
    <string name="incorrect_pin">Incorrect PIN, try again,</string>
    <string name="incorrect_pin_title">Incorrect PIN</string>
    <string name="incorrect_pin_message">Incorrect PIN, please try again.</string>

    <string name="sync">Sync</string>
    <string name="submit">Submit</string>
    <string name="id_entry">Swipe Badge</string>
    <string name="enter_id">Enter ID</string>
    <string name="id_empty">ID Empty</string>
    <string name="id_empty_message">ID must have a value.</string>
    <string name="config_error">The application needs to be configured, please close the application (swipe the app away from the recent apps menu) and open GFS Admin to set configuration information.</string>
    <string name="enter_job_code">Job Code Change</string>

</resources>
