<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.gfsclock.gfstimeclock.OptionsScreen">


    <Button
        android:text="@string/clock_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clockIn"
        android:id="@+id/ClockInButton"
        tools:layout_alignParentTop="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:text="@string/break_out_button"
        android:onClick="breakOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BreakOutButton"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/ClockInButton"
        app:layout_constraintLeft_toLeftOf="@+id/ClockInButton"
        app:layout_constraintRight_toRightOf="@+id/ClockInButton" />

    <Button
        android:text="@string/break_in_button"
        android:onClick="breakIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BreakInButton"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/ClockOutButton"
        app:layout_constraintRight_toRightOf="@+id/ClockOutButton"
        app:layout_constraintLeft_toLeftOf="@+id/ClockOutButton" />

    <Button
        android:text="@string/lunch_in_button"
        android:onClick="lunchIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LunchInButton"
        app:layout_constraintLeft_toLeftOf="@+id/PunchHistoryButton"
        app:layout_constraintRight_toRightOf="@+id/PunchHistoryButton"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/PunchHistoryButton" />

    <Button
        android:text="@string/clock_out_button"
        android:onClick="clockOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClockOutButton"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/ChangeJobButton"
        app:layout_constraintLeft_toLeftOf="@+id/ChangeJobButton"
        app:layout_constraintRight_toRightOf="@+id/ChangeJobButton" />


    <Button
        android:text="@string/lunch_out_button"
        android:onClick="lunchOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LunchOutButton"
        app:layout_constraintLeft_toLeftOf="@+id/BreakOutButton"
        app:layout_constraintRight_toRightOf="@+id/BreakOutButton"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/BreakOutButton"
        app:layout_constraintHorizontal_bias="1.0" />


    <Button
        android:text="@string/change_job_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ChangeJobButton"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/employeeIdTextView"
        android:text="@string/user_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/punch_history"
        android:onClick="showPunchHistoryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PunchHistoryButton"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />


</android.support.constraint.ConstraintLayout>
