<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.gfsclock.gfstimeclock.ClockOptions"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/ClockInButton"
        android:layout_width="0dp"

        android:layout_height="48dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="clockIn"
        android:text="@string/clock_in_button"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_alignParentTop="false" />

    <Button
        android:id="@+id/BreakOutButton"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="breakOut"
        android:text="@string/break_out_button"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/ClockInButton"
        app:layout_constraintTop_toBottomOf="@+id/ClockInButton"
        app:layout_constraintRight_toRightOf="@+id/ClockInButton"
        android:layout_width="0dp" />

    <Button
        android:id="@+id/BreakInButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:onClick="breakIn"
        android:text="@string/break_in_button"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/ClockOutButton"

        app:layout_constraintLeft_toLeftOf="@+id/ClockOutButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="@+id/ClockOutButton" />

    <Button
        android:id="@+id/LunchInButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:onClick="lunchIn"
        android:text="@string/lunch_in_button"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/BreakInButton"

        app:layout_constraintLeft_toLeftOf="@+id/BreakInButton"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="@+id/BreakInButton" />

    <Button
        android:id="@+id/ClockOutButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:onClick="clockOut"
        android:text="@string/clock_out_button"

        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.466" />


    <Button
        android:id="@+id/LunchOutButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="lunchOut"
        android:text="@string/lunch_out_button"
        android:textAlignment="center"

        app:layout_constraintLeft_toLeftOf="@+id/BreakOutButton"
        app:layout_constraintRight_toRightOf="@+id/BreakOutButton"
        app:layout_constraintTop_toBottomOf="@+id/BreakOutButton" />


    <Button
        android:id="@+id/ChangeJobButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/change_job_button"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/employeeIdTextView"
        android:text="@string/user_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.75"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/PunchHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="showPunchHistoryDialog"
        android:text="@string/punch_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/ChangeJobButton"
        app:layout_constraintRight_toRightOf="@+id/ChangeJobButton"
        app:layout_constraintTop_toBottomOf="@+id/ChangeJobButton"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="481dp" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="240dp" />


</android.support.constraint.ConstraintLayout>
