<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scan_badge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.gfsclock.gfstimeclock.ScanBadgeActivity">

    <Button
        android:id="@+id/scan"
        android:layout_width="300dp"
        android:layout_height="88dp"
        android:layout_marginLeft="0dp"
        android:elevation="0dp"
        android:onClick="scanBadge1"
        android:text="@string/scan_badge"
        android:textAlignment="center"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/manual"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin"
        android:text="@string/admin"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="admin"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/manual"
        android:layout_width="300dp"
        android:layout_height="88dp"
        android:onClick="manual"
        android:text="@string/id_entry"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan"
        app:layout_constraintVertical_bias="0.52" />
</android.support.constraint.ConstraintLayout>
