<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.gfsclock.gfstimeclock.AdminOptions">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:text="@string/password"
        app:layout_constraintRight_toRightOf="@+id/Username"
        app:layout_constraintLeft_toLeftOf="@+id/Username"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/Username"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        android:ems="10"
        android:id="@+id/Username"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/ClockID"
        app:layout_constraintLeft_toLeftOf="@+id/ClockID"
        app:layout_constraintRight_toRightOf="@+id/ClockID"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="text|number"
        android:ems="10"
        android:id="@+id/ClockID"
        android:text="@string/clock_id"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:text="@android:string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Save"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintLeft_toLeftOf="@+id/Password"
        app:layout_constraintRight_toRightOf="@+id/Password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
